--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jzz-midi-rtc",
-  "version": "1.0.0",
-  "description": "coming soon...",
+  "version": "1.0.1",
+  "description": "MIDI via WebRTC",
   "main": "javascript/JZZ.midi.RTC.js",
   "scripts": {
     "test": "nyc mocha",
